# esp32-ble-gamepad

./: .buildconfig  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
